# is_ascii_speedups

./: .gitignore  Cargo.toml  LICENSE-MIT  Process.hs  benchit
benches/: is_ascii_fns.rs
src/: lib.rs
