[package]
name = "is_ascii_speedups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"

[dependencies]

[[bench]]
name = "is_ascii_fns"
harness = false
